# BasicMotion

./: .gitignore  CMakeLists.txt  README
src/: BasicMotion.cpp  BasicMotion.h  cameraThread.cpp  cameraThread.h  jscontroller.cpp  jscontroller.h  main.cpp  workerThread.cpp  workerThread.h
